--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
 
             <div class="item">
                 <a href="https://origami.me/camel/"><img src="images/camel.png"></a>
-                <p>By clicking on this you can learn how to make camel</p>
+                <p>you know !camel store food and water in its hump </p>
             </div>
 
             <div class="item">
                 <a href="https://origami.me/camel/"><img src="images/chameleon.png"></a>
-                <p>By clicking on this you can learn how to make cameleon</p>
+                <p>you know!chameleon changes its colour to protect it self</p>
             </div>
 
             <div class="item">
@@ -57,17 +57,17 @@
         <div class="grid2">
             <div class="item">
                 <a href="https://origami.me/camel/"><img src="images/panda.png"></a>
-                <p>By clicking on this you can learn how to make panda</p>
+                <p>you Know ! panda has very thick layer of fat to keep it worm</p>
             </div>
 
             <div class="item">
                 <a href="https://origami.me/camel/"><img src="images/pigeon.png"></a>
-                <p>By clicking on this you can learn how to make penguin</p>
+                <p>you know ! piegeon hugs each other to keep it worm</p>
             </div>
 
             <div class="item">
                 <a href="https://origami.me/camel/"><img src="images/teddy.png"></a>
-                <p>By clicking on this you can learn how to make teddy</p>
+                <p>teddy is the favourite toy for the kids</p>
             </div>
         </div>
 
